--- a/ui/base/src/main/res/values/themes.xml
+++ b/ui/base/src/main/res/values/themes.xml
@@ -14,7 +14,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/background_color</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="android:navigationBarColor">?attr/background_color</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
         <!-- Customize your theme here. -->
+
+        <item name="colorControlHighlight">?attr/colorSecondary</item>
 
         <item name="cardViewStyle">@style/RM.Card</item>
         <item name="materialCalendarStyle">@style/RM.Card</item>
