UI updates to characters list

--- a/ui/characterList/src/main/res/layout/fragment_character_list.xml
+++ b/ui/characterList/src/main/res/layout/fragment_character_list.xml
@@ -4,18 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="?attr/background_color"
     android:paddingHorizontal="24dp"
-    android:paddingVertical="16dp"
+    android:paddingTop="16dp"
     tools:context=".ui.CharacterListFragment">
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:foreground="@drawable/custom_ripple"
+        style="@style/RM.Button.Back"
         android:contentDescription="@string/cd_back"
-        android:padding="8dp"
-        android:src="@drawable/icon_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,17 +30,28 @@
         app:layout_constraintStart_toEndOf="@+id/ivBack"
         app:layout_constraintTop_toTopOf="@+id/ivBack" />
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:indeterminate="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCharactersList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:fadingEdge="vertical"
         android:requiresFadingEdge="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivBack"
+        app:layout_constraintTop_toBottomOf="@+id/pbLoading"
         tools:listitem="@layout/item_character" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
