Improvements to home screen animations

--- a/ui/home/src/main/res/layout/fragment_home.xml
+++ b/ui/home/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
     tools:context=".HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="24dp">
