--- a/ui/home/src/main/res/layout/fragment_home.xml
+++ b/ui/home/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
                     android:layout_margin="24dp"
                     android:text="@string/characters"
                     android:textSize="32sp"
-                    android:transitionName="firstTransitionName"
+                    android:transitionName="character_title"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
