Fix : Fixed issues with animations

--- a/ui/character/characterList/src/main/res/layout/fragment_character_list.xml
+++ b/ui/character/characterList/src/main/res/layout/fragment_character_list.xml
@@ -23,6 +23,7 @@
         style="@style/RM.Text.Value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:elevation="32dp"
         android:text="@string/characters"
         android:textSize="32sp"
         android:transitionName="charListTitle"
