--- a/ui/character/characterDetails/src/main/res/layout/fragment_character_details.xml
+++ b/ui/character/characterDetails/src/main/res/layout/fragment_character_details.xml
@@ -7,71 +7,76 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="?attr/background_color"
-    android:paddingHorizontal="24dp"
-    android:paddingTop="16dp"
     tools:context=".CharacterDetailsFragment">
 
     <ImageView
         android:id="@+id/ivBack"
         style="@style/RM.Button.Back"
+        android:layout_margin="24dp"
         android:contentDescription="@string/cd_back"
         android:elevation="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cvCharacterImage"
-        style="@style/RM.Card"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cvAvatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ivBack"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="?text_value_color"
-        app:strokeWidth="4dp">
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <ImageView
-        android:id="@+id/ivCharacter"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:background="@color/white"
-        android:contentDescription="@string/cd_character_image"
-        android:elevation="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.card.MaterialCardView
+        <ImageView
+            android:id="@+id/ivCharacter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/cd_character_image"
+            android:scaleType="centerCrop"
+            android:transitionName="characterAvatar"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:background="@color/dune" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Space
+        android:id="@+id/sAvatarBottom"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        app:layout_constraintBottom_toBottomOf="@+id/cvAvatar" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvInfo"
         style="@style/RM.Card"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/cvCharacterImage"
-        app:layout_constraintEnd_toStartOf="@+id/cvCharacterImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivBack"
-        app:strokeColor="?text_value_color"
-        app:strokeWidth="2dp" />
-
-    <TextView
-        android:id="@+id/tvName"
-        style="@style/RM.Text.Value"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:elevation="8dp"
-        android:gravity="end"
-        android:textSize="32sp"
-        android:transitionName="characterAvatar"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvCharacterImage"
-        tools:text="Rick Sanchez" />
+        app:layout_constraintTop_toTopOf="@+id/sAvatarBottom">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="32dp">
+
+            <TextView
+                android:id="@+id/tvName"
+                style="@style/RM.Text.Value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:elevation="32dp"
+                android:textSize="32sp"
+                android:transitionName="characterName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Rick Sanchez" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
