--- a/ui/character/characterDetails/src/main/res/layout/fragment_character_details.xml
+++ b/ui/character/characterDetails/src/main/res/layout/fragment_character_details.xml
@@ -30,9 +30,7 @@
         app:layout_constraintBottom_toBottomOf="@id/ivBack"
         app:layout_constraintEnd_toEndOf="@id/ivBack"
         app:layout_constraintStart_toStartOf="@id/ivBack"
-        app:layout_constraintTop_toTopOf="@id/ivBack"
-        app:strokeColor="?text_value_color"
-        app:strokeWidth="1dp" />
+        app:layout_constraintTop_toTopOf="@id/ivBack" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cvAvatar"
@@ -70,6 +68,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginBottom="32dp"
+        android:transitionName="characterContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
